gen/org/argus/cit/intellij/core/lang/parser/JawaParser.java
// This is a generated file. Not intended for manual editing.
package org.argus.cit.intellij.core.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.argus.cit.intellij.core.lang.psi.JawaTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JawaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ACCESS_EXPRESSION) {
      r = AccessExpression(b, 0);
    }
    else if (t == ANNOTATION) {
      r = Annotation(b, 0);
    }
    else if (t == ANNOTATION_VALUE) {
      r = AnnotationValue(b, 0);
    }
    else if (t == ARG_CLAUSE) {
      r = ArgClause(b, 0);
    }
    else if (t == ASSIGNMENT_STATEMENT) {
      r = AssignmentStatement(b, 0);
    }
    else if (t == BINARY_EXPRESSION) {
      r = BinaryExpression(b, 0);
    }
    else if (t == BODY) {
      r = Body(b, 0);
    }
    else if (t == CMP) {
      r = CMP(b, 0);
    }
    else if (t == CALL_LHS) {
      r = CallLhs(b, 0);
    }
    else if (t == CALL_STATEMENT) {
      r = CallStatement(b, 0);
    }
    else if (t == CAST_EXPRESSION) {
      r = CastExpression(b, 0);
    }
    else if (t == CATCH_CLAUSE) {
      r = CatchClause(b, 0);
    }
    else if (t == CATCH_RANGE) {
      r = CatchRange(b, 0);
    }
    else if (t == CLASS_OR_INTERFACE_DECLARATION) {
      r = ClassOrInterfaceDeclaration(b, 0);
    }
    else if (t == CMP_EXPRESSION) {
      r = CmpExpression(b, 0);
    }
    else if (t == CONST_CLASS_EXPRESSION) {
      r = ConstClassExpression(b, 0);
    }
    else if (t == EXCEPTION_EXPRESSION) {
      r = ExceptionExpression(b, 0);
    }
    else if (t == EXPRESSION_LHS) {
      r = Expression_LHS(b, 0);
    }
    else if (t == EXPRESSION_RHS) {
      r = Expression_RHS(b, 0);
    }
    else if (t == EXTEND_AND_IMPLEMENT) {
      r = ExtendAndImplement(b, 0);
    }
    else if (t == EXTENDS_AND_IMPLEMENTS_CLAUSES) {
      r = ExtendsAndImplementsClauses(b, 0);
    }
    else if (t == FIELD_DEF_SYMBOL) {
      r = FieldDefSymbol(b, 0);
    }
    else if (t == FIELD_NAME_SYMBOL) {
      r = FieldNameSymbol(b, 0);
    }
    else if (t == GOTO_STATEMENT) {
      r = GotoStatement(b, 0);
    }
    else if (t == IF_STATEMENT) {
      r = IfStatement(b, 0);
    }
    else if (t == INDEXING_EXPRESSION) {
      r = IndexingExpression(b, 0);
    }
    else if (t == INSTANCE_FIELD_DECLARATION) {
      r = InstanceFieldDeclaration(b, 0);
    }
    else if (t == INSTANCE_FIELD_DECLARATION_BLOCK) {
      r = InstanceFieldDeclarationBlock(b, 0);
    }
    else if (t == INSTANCEOF_EXPRESSION) {
      r = InstanceofExpression(b, 0);
    }
    else if (t == LOCATION_ID) {
      r = LOCATION_ID(b, 0);
    }
    else if (t == LENGTH_EXPRESSION) {
      r = LengthExpression(b, 0);
    }
    else if (t == LITERAL_EXPRESSION) {
      r = LiteralExpression(b, 0);
    }
    else if (t == LOCAL_VAR_DECLARATION) {
      r = LocalVarDeclaration(b, 0);
    }
    else if (t == LOCATION) {
      r = Location(b, 0);
    }
    else if (t == LOCATION_DEF_SYMBOL) {
      r = LocationDefSymbol(b, 0);
    }
    else if (t == LOCATION_SYMBOL) {
      r = LocationSymbol(b, 0);
    }
    else if (t == METHOD_DECLARATION) {
      r = MethodDeclaration(b, 0);
    }
    else if (t == METHOD_DEF_SYMBOL) {
      r = MethodDefSymbol(b, 0);
    }
    else if (t == METHOD_NAME_SYMBOL) {
      r = MethodNameSymbol(b, 0);
    }
    else if (t == MONITOR_STATEMENT) {
      r = MonitorStatement(b, 0);
    }
    else if (t == NUMBER_LITERAL) {
      r = NUMBER_LITERAL(b, 0);
    }
    else if (t == NAME_EXPRESSION) {
      r = NameExpression(b, 0);
    }
    else if (t == NEW_EXPRESSION) {
      r = NewExpression(b, 0);
    }
    else if (t == NULL_EXPRESSION) {
      r = NullExpression(b, 0);
    }
    else if (t == PARAM) {
      r = Param(b, 0);
    }
    else if (t == PARAM_CLAUSE) {
      r = ParamClause(b, 0);
    }
    else if (t == RETURN_STATEMENT) {
      r = ReturnStatement(b, 0);
    }
    else if (t == SIGNATURE_ANNOTATION) {
      r = SignatureAnnotation(b, 0);
    }
    else if (t == STATEMENT) {
      r = Statement(b, 0);
    }
    else if (t == STATIC_FIELD_DECLARATION) {
      r = StaticFieldDeclaration(b, 0);
    }
    else if (t == STATIC_FIELD_DEF_SYMBOL) {
      r = StaticFieldDefSymbol(b, 0);
    }
    else if (t == STATIC_FIELD_NAME_SYMBOL) {
      r = StaticFieldNameSymbol(b, 0);
    }
    else if (t == SWITCH_CASE) {
      r = SwitchCase(b, 0);
    }
    else if (t == SWITCH_DEFAULT_CASE) {
      r = SwitchDefaultCase(b, 0);
    }
    else if (t == SWITCH_STATEMENT) {
      r = SwitchStatement(b, 0);
    }
    else if (t == THROW_STATEMENT) {
      r = ThrowStatement(b, 0);
    }
    else if (t == TUPLE_EXPRESSION) {
      r = TupleExpression(b, 0);
    }
    else if (t == TYPE) {
      r = Type(b, 0);
    }
    else if (t == TYPE_ANNOTATION) {
      r = TypeAnnotation(b, 0);
    }
    else if (t == TYPE_DEF_SYMBOL) {
      r = TypeDefSymbol(b, 0);
    }
    else if (t == TYPE_EXPRESSION) {
      r = TypeExpression(b, 0);
    }
    else if (t == TYPE_FRAGMENT) {
      r = TypeFragment(b, 0);
    }
    else if (t == TYPE_FRAGMENT_WITH_INIT) {
      r = TypeFragmentWithInit(b, 0);
    }
    else if (t == TYPE_SYMBOL) {
      r = TypeSymbol(b, 0);
    }
    else if (t == UNARY_EXPRESSION) {
      r = UnaryExpression(b, 0);
    }
    else if (t == VAR_DEF_SYMBOL) {
      r = VarDefSymbol(b, 0);
    }
    else if (t == VAR_SYMBOL) {
      r = VarSymbol(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return CompilationUnit(b, l + 1);
  }

  /* ********************************************************** */
  // VarSymbol '.' FieldNameSymbol
  public static boolean AccessExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessExpression")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VarSymbol(b, l + 1);
    r = r && consumeToken(b, DOT);
    r = r && FieldNameSymbol(b, l + 1);
    exit_section_(b, m, ACCESS_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // '@' id AnnotationValue?
  public static boolean Annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && consumeToken(b, ID);
    r = r && Annotation_2(b, l + 1);
    exit_section_(b, m, ANNOTATION, r);
    return r;
  }

  // AnnotationValue?
  private static boolean Annotation_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2")) return false;
    AnnotationValue(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ID
  public static boolean AnnotationValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AnnotationValue")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, ANNOTATION_VALUE, r);
    return r;
  }

  /* ********************************************************** */
  // '(' (VarSymbol (',' VarSymbol)*)? ')'
  public static boolean ArgClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgClause")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && ArgClause_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ARG_CLAUSE, r);
    return r;
  }

  // (VarSymbol (',' VarSymbol)*)?
  private static boolean ArgClause_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgClause_1")) return false;
    ArgClause_1_0(b, l + 1);
    return true;
  }

  // VarSymbol (',' VarSymbol)*
  private static boolean ArgClause_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgClause_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VarSymbol(b, l + 1);
    r = r && ArgClause_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' VarSymbol)*
  private static boolean ArgClause_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgClause_1_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ArgClause_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArgClause_1_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' VarSymbol
  private static boolean ArgClause_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgClause_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && VarSymbol(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Expression_LHS ':=' Expression_RHS (TypeAnnotation|Annotation)*
  public static boolean AssignmentStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement")) return false;
    if (!nextTokenIs(b, "<assignment statement>", ID, STATIC_ID)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_STATEMENT, "<assignment statement>");
    r = Expression_LHS(b, l + 1);
    r = r && consumeToken(b, ASSIGN_OP);
    r = r && Expression_RHS(b, l + 1);
    r = r && AssignmentStatement_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (TypeAnnotation|Annotation)*
  private static boolean AssignmentStatement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!AssignmentStatement_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AssignmentStatement_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // TypeAnnotation|Annotation
  private static boolean AssignmentStatement_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = TypeAnnotation(b, l + 1);
    if (!r) r = Annotation(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // VarSymbol binary_op (VarSymbol|NUMBER_LITERAL|'null')
  public static boolean BinaryExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpression")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VarSymbol(b, l + 1);
    r = r && binary_op(b, l + 1);
    r = r && BinaryExpression_2(b, l + 1);
    exit_section_(b, m, BINARY_EXPRESSION, r);
    return r;
  }

  // VarSymbol|NUMBER_LITERAL|'null'
  private static boolean BinaryExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpression_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VarSymbol(b, l + 1);
    if (!r) r = NUMBER_LITERAL(b, l + 1);
    if (!r) r = consumeToken(b, NULL_LITERAL);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '{' LocalVarDeclaration* Location* CatchClause* '}'
  public static boolean Body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && Body_1(b, l + 1);
    r = r && Body_2(b, l + 1);
    r = r && Body_3(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, BODY, r);
    return r;
  }

  // LocalVarDeclaration*
  private static boolean Body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!LocalVarDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Body_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // Location*
  private static boolean Body_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!Location(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Body_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // CatchClause*
  private static boolean Body_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!CatchClause(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Body_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // 'fcmpl' | 'fcmpg' | 'dcmpl' | 'dcmpg' | 'lcmp'
  public static boolean CMP(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CMP")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CMP, "<cmp>");
    r = consumeToken(b, "fcmpl");
    if (!r) r = consumeToken(b, "fcmpg");
    if (!r) r = consumeToken(b, "dcmpl");
    if (!r) r = consumeToken(b, "dcmpg");
    if (!r) r = consumeToken(b, "lcmp");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // VarSymbol ':='
  public static boolean CallLhs(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallLhs")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VarSymbol(b, l + 1);
    r = r && consumeToken(b, ASSIGN_OP);
    exit_section_(b, m, CALL_LHS, r);
    return r;
  }

  /* ********************************************************** */
  // 'call' CallLhs? MethodNameSymbol ArgClause SignatureAnnotation TypeAnnotation Annotation*
  public static boolean CallStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallStatement")) return false;
    if (!nextTokenIs(b, CALL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CALL);
    r = r && CallStatement_1(b, l + 1);
    r = r && MethodNameSymbol(b, l + 1);
    r = r && ArgClause(b, l + 1);
    r = r && SignatureAnnotation(b, l + 1);
    r = r && TypeAnnotation(b, l + 1);
    r = r && CallStatement_6(b, l + 1);
    exit_section_(b, m, CALL_STATEMENT, r);
    return r;
  }

  // CallLhs?
  private static boolean CallStatement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallStatement_1")) return false;
    CallLhs(b, l + 1);
    return true;
  }

  // Annotation*
  private static boolean CallStatement_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallStatement_6")) return false;
    int c = current_position_(b);
    while (true) {
      if (!Annotation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CallStatement_6", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // '(' Type ')' VarSymbol
  public static boolean CastExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CastExpression")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && Type(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && VarSymbol(b, l + 1);
    exit_section_(b, m, CAST_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // 'catch' Type CatchRange 'goto' LocationSymbol ';'
  public static boolean CatchClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CatchClause")) return false;
    if (!nextTokenIs(b, CATCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CATCH);
    r = r && Type(b, l + 1);
    r = r && CatchRange(b, l + 1);
    r = r && consumeToken(b, GOTO);
    r = r && LocationSymbol(b, l + 1);
    r = r && consumeToken(b, SEMI);
    exit_section_(b, m, CATCH_CLAUSE, r);
    return r;
  }

  /* ********************************************************** */
  // '@' '[' LocationSymbol '..' LocationSymbol ']'
  public static boolean CatchRange(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CatchRange")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CATCH_RANGE, null);
    r = consumeToken(b, AT);
    r = r && consumeToken(b, LBRACKET);
    p = r; // pin = 2
    r = r && report_error_(b, LocationSymbol(b, l + 1));
    r = p && report_error_(b, consumeToken(b, RANGE)) && r;
    r = p && report_error_(b, LocationSymbol(b, l + 1)) && r;
    r = p && consumeToken(b, RBRACKET) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'record' TypeDefSymbol Annotation* ExtendsAndImplementsClauses? InstanceFieldDeclarationBlock StaticFieldDeclaration* MethodDeclaration*
  public static boolean ClassOrInterfaceDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOrInterfaceDeclaration")) return false;
    if (!nextTokenIs(b, CLASS_OR_INTERFACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CLASS_OR_INTERFACE);
    r = r && TypeDefSymbol(b, l + 1);
    r = r && ClassOrInterfaceDeclaration_2(b, l + 1);
    r = r && ClassOrInterfaceDeclaration_3(b, l + 1);
    r = r && InstanceFieldDeclarationBlock(b, l + 1);
    r = r && ClassOrInterfaceDeclaration_5(b, l + 1);
    r = r && ClassOrInterfaceDeclaration_6(b, l + 1);
    exit_section_(b, m, CLASS_OR_INTERFACE_DECLARATION, r);
    return r;
  }

  // Annotation*
  private static boolean ClassOrInterfaceDeclaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOrInterfaceDeclaration_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!Annotation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassOrInterfaceDeclaration_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ExtendsAndImplementsClauses?
  private static boolean ClassOrInterfaceDeclaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOrInterfaceDeclaration_3")) return false;
    ExtendsAndImplementsClauses(b, l + 1);
    return true;
  }

  // StaticFieldDeclaration*
  private static boolean ClassOrInterfaceDeclaration_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOrInterfaceDeclaration_5")) return false;
    int c = current_position_(b);
    while (true) {
      if (!StaticFieldDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassOrInterfaceDeclaration_5", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // MethodDeclaration*
  private static boolean ClassOrInterfaceDeclaration_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOrInterfaceDeclaration_6")) return false;
    int c = current_position_(b);
    while (true) {
      if (!MethodDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassOrInterfaceDeclaration_6", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // CMP '(' VarSymbol ',' VarSymbol ')'
  public static boolean CmpExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CmpExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CMP_EXPRESSION, "<cmp expression>");
    r = CMP(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && VarSymbol(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && VarSymbol(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ClassOrInterfaceDeclaration*
  static boolean CompilationUnit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CompilationUnit")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ClassOrInterfaceDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CompilationUnit", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // 'constclass' TypeAnnotation
  public static boolean ConstClassExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstClassExpression")) return false;
    if (!nextTokenIs(b, CONST_CLASS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONST_CLASS);
    r = r && TypeAnnotation(b, l + 1);
    exit_section_(b, m, CONST_CLASS_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // 'Exception'
  public static boolean ExceptionExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExceptionExpression")) return false;
    if (!nextTokenIs(b, EXCEPTION)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXCEPTION);
    exit_section_(b, m, EXCEPTION_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // AccessExpression
  //                    |IndexingExpression
  //                    |NameExpression
  public static boolean Expression_LHS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression_LHS")) return false;
    if (!nextTokenIs(b, "<expression lhs>", ID, STATIC_ID)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_LHS, "<expression lhs>");
    r = AccessExpression(b, l + 1);
    if (!r) r = IndexingExpression(b, l + 1);
    if (!r) r = NameExpression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
